--- a/CSCI201_FinalProj_v2/src/main/webapp/search.css
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.css
@@ -146,7 +146,14 @@ body{
     flex-direction: column;
     flex-grow: 1;
     align-content:center;
-    padding:0;
+    padding:15px;
+    color: white;
+  }
+  
+  
+  #response p{
+  	color:#FFE9D0;
+  	padding: 10px;
   }
 
 	.searchResults{
@@ -154,8 +161,11 @@ body{
 	 font-size:3.5em;
 	 padding:0 0 0 50px;
 	 margin-bottom:0px;
+	 margin-left: 10px;
 	 text-decoration:underline;
 	}
+	
+	
  
 
   .resultsGrid {
