--- a/CSCI201_FinalProj_v2/src/main/webapp/search.css
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.css
@@ -149,14 +149,7 @@ body{
     flex-direction: column;
     flex-grow: 1;
     align-content:center;
-    padding:15px;
-    color: white;
-  }
-  
-  
-  #response p{
-  	color:#FFE9D0;
-  	padding: 10px;
+    padding:0;
   }
 
 	.searchResults{
@@ -164,11 +157,8 @@ body{
 	 font-size:3.5em;
 	 padding:0 0 0 50px;
 	 margin-bottom:0px;
-	 margin-left: 10px;
 	 text-decoration:underline;
 	}
-	
-	
  
 
   .resultsGrid {
@@ -236,6 +226,27 @@ body{
   #titleColTemplate{
   	display: none;
   }
+  
+  #additionalInfo {
+    display: none; /* Initially hide the additional info */
+    background-color: #E6F4F1;
+    padding: 20px;
+    border-radius: 5px;
+    margin: 20px;
+    
+}
+
+#additionalInfo h2 {
+    color: #324A51;
+    font-size: 24px;
+}
+
+#additionalInfo p {
+    color: #00A8D6;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+ 
 
   #footer{
 	margin-top: 35px;
@@ -256,6 +267,3 @@ body{
 	padding: 15px;
 	margin: 0px;
 }
-
-
-  
