--- a/CSCI201_FinalProj_v2/src/main/webapp/search.css
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.css
@@ -2,6 +2,8 @@ body{
 	margin:0;
 	padding:0;
 	width: 100%;
+	max-width: 100%;
+	overflow-x: hidden;
 	background-color:black;
 	}
 
@@ -150,11 +152,13 @@ body{
     flex-grow: 1;
     align-content:center;
     padding:0;
+    border-radius: 10px;
   }
 
 	.searchResults{
 	 color:#FFE9D0;
 	 font-size:3.5em;
+	 font-family: "Lexend Mega", sans-serif;
 	 padding:0 0 0 50px;
 	 margin-bottom:0px;
 	 text-decoration:underline;
@@ -333,6 +337,7 @@ body{
 	margin-bottom: 39px;
 	margin-left: auto;
 	margin-right: auto;
+	border-radius: 7px;
 }
 
 .profile-menu-item {
