--- a/CSCI201_FinalProj_v2/src/main/webapp/search.css
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.css
@@ -486,9 +486,14 @@ body {
 
 .ReviewClass{
 	
-	background-color: red;
+	background-color: #8B008B;
 	color: white;
+	font-family: Arial;
+	font-size: 20px;
 	border-radius: 7px;
+	border-width: 8px;
+	padding: 5px;
+	margin-bottom: 15px;
 	
 	
 }
