--- a/CSCI201_FinalProj_v2/src/main/webapp/search.css
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.css
@@ -255,15 +255,20 @@ body {
     margin-bottom: 10px;
 }
 
+#reviewForm {
+	background-color: #E6F4F1;
+	color: #00A8D6;
+}
+
 #footer {
-    margin-top: 35px;
+    margin-top: 575px;
     background-color: black;
     color: white;
     width: 100%;
     margin-left: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
-    padding: 3px;
+    padding: 0px;
     font-family: "Exo", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -273,11 +278,12 @@ body {
 }
 
 #footer p {
+	width: 100%;
     padding: 15px;
     background-color: #324a51;
     margin: 0px;
     position: absolute;
-    bottom: 0px;
+    bottom: -370px;
     left: 0px;
 }
 
